--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    url: jdbc:postgresql://dpg-cojpt0md3nmc73c07ihg-a/buy_sell_db_bwisdpg-cojpt0md3nmc73c07ihg-a/buy_sell_db_bwis
+    url: jdbc:postgresql://dpg-cojpt0md3nmc73c07ihg-a.oregon-postgres.render.com/buy_sell_db_bwis
     username: buysellshop
     password: TtyPOixawbxm7WC26dQacp8SQ2TqtDLO
     driver-class-name: org.postgresql.Driver
@@ -12,5 +12,6 @@ spring:
     properties:
       hibernate:
         format_sql: true
-    database: postgresql
+    # Виправлення: вказуємо платформу бази даних, а не ім'я бази даних
+    database: POSTGRESQL
     database-platform: org.hibernate.dialect.PostgreSQLDialect
